--- a/index.html
+++ b/index.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container-login">
+        <div class="content-box">
+            <div class="form-box">
+                <h2>Login</h2>
+                <form>
+
+                    <div class="input-box">
+                        <span>Usuário</span>
+                        <input type="text" placeholder="Usuário"> 
+                    </div>
+
+                    <div class="input-box">
+                        <span>Senha</span>
+                        <input type="password" placeholder="Senha"> 
+                    </div>
+
+                    <div class="esqueceu-senha">
+                        <a href="#">Esqueceu a Senha?</a>
+                    </div>
+
+                    <div class="input-box">
+                        <input type="submit" value="Entrar">
+                    </div>
+
+
+
+
+
+
+                </form>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+    </div>
 </body>
 </html>
