Organização de pastas
Como troquei de computador, foi necessário atualizar algumas pastas e seus respectivos caminhos. Os arquivos estão prontos para reiniciar com as mudanças nos códigos

--- a/HTML/loginrequisitante.html
+++ b/HTML/loginrequisitante.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="requisitante.css">
+    <link rel="stylesheet" href="/CSS/requisitante.css">
 </head>
 <body>
     <div class="container-login">
         <div class="image-box">
-            <img src="img/requisitante.jpg" alt="Homem trabalhando">
+            <img src="/img/requisitante.jpg" alt="Homem trabalhando">
         </div>
         <div class="content-box">
             <div class="form-box">
