--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selecione o tipo</title>
-    <link rel="stylesheet" href="inicio.css">
+    <link rel="stylesheet" href="/CSS/inicio.css">
 </head>
 <body>
     <div class="container">
         <h1>Selecione uma opção abaixo:</h1>
         <p>Requisitante</p>
         <button class="botao">
-            <a href="/PI-01/loginrequisitante.html">Selecionar</a>
+            <a href="/HTML/loginrequisitante.html">Selecionar</a>
         </button>
         <p>Operador</p>
         <button class="botao">
-                <a href="/PI-01/loginoperador.html">Selecionar</a>
+                <a href="/HTML/loginoperador.html">Selecionar</a>
         </button>
     </div>
 </body>
