--- a/HTML/layout.html
+++ b/HTML/layout.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout</title>
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="/CSS/layout.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="ContainerPrincipal">
         <header class="cabecario">
-            <img src="logo.png" alt="logo">
+            <img src="/img/logo.png" alt="logo">
             <h4 id="operador">Operador</h4>
         </header>
 
         <div class="principal">
 
             <div class="menu">
-                <a id="home" href="layout.html">
+                <a id="home" href="/HTML/layout.html">
                     <span id="home" class="material-symbols-outlined">home</span>
                 </a>
 
-                <a id="adicionar" href="chamados.html">
+                <a id="adicionar" href="/HTML/chamados.html">
                     <span class="material-symbols-outlined">add_circle</span>
                 </a>
 
