--- a/HTML/layout.html
+++ b/HTML/layout.html
@@ -40,7 +40,7 @@
 
         </div>
         <footer>
-            <p>&copy; 2024 - Projeto Integrador - UNIVESP</p>
+            <h6>&copy; 2024 - Projeto Integrador - UNIVESP</h6>
         </footer>
     </div>
 </body>
